# study_cpp_basics_xcode

./: .gitignore
homework_02_task_01/homework_02_task_01/: main.cpp
homework_02_task_01/homework_02_task_01.xcodeproj/: project.pbxproj
homework_02_task_02/homework_02_task_02/: main.cpp
homework_02_task_02/homework_02_task_02.xcodeproj/: project.pbxproj
homework_02_task_03/homework_02_task_03/: main.cpp
homework_02_task_03/homework_02_task_03.xcodeproj/: project.pbxproj
homework_03_task_01/homework_03_task_01/: main.cpp
homework_03_task_01/homework_03_task_01.xcodeproj/: project.pbxproj
homework_03_task_02/homework_03_task_02/: main.cpp
homework_03_task_02/homework_03_task_02.xcodeproj/: project.pbxproj
homework_04_task_01/homework_04_task_01/: main.cpp
homework_04_task_01/homework_04_task_01.xcodeproj/: project.pbxproj
homework_04_task_02/homework_04_task_02.xcodeproj/: project.pbxproj
homework_11_task_05/homework_11_task_05/: CMakeLists.txt  Parallelogram.cpp  Parallelogram.hpp  Quardilateral.hpp  Rhombus.cpp  Triangle.cpp  Triangle.hpp  main.cpp
race_game/race_game/: AirVehicle.cpp  AirVehicle.hpp  AllTerrainBoots.cpp  AllTerrainBoots.hpp  Broom.cpp  Broom.hpp  CMakeLists.txt  CMakeLists.txt.bak  Camel.cpp  Camel.hpp  Centaur.cpp  Centaur.hpp  Eagle.cpp  Eagle.hpp  Exceptions.cpp  Exceptions.hpp  FastCamel.cpp  FastCamel.hpp  Game.cpp  Game.hpp  LandVehicle.cpp  LandVehicle.hpp  MagicCarpet.cpp  MagicCarpet.hpp  Player.cpp  Player.hpp  SurfaceType.cpp  SurfaceType.hpp  UserDialog.cpp  UserDialog.hpp  Vehicle.cpp  Vehicle.hpp  main.cpp
(+120 files in other folders)
